--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1726,7 +1726,7 @@
 	}
 
 	header.major h2 {
-		color: #4acaa8;
+		color: #00274c;
 		font-size: 3.5em;
 	}
 
@@ -2461,8 +2461,8 @@
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #4acaa8;
-		color: #d1f1e9;
+		background: #00274c;
+		color: #e5f2ff;
 		height: 100%;
 		overflow-y: auto;
 		position: fixed;
@@ -2512,7 +2512,7 @@
 			}
 
 			#header > header p {
-				color: #d1f1e9;
+				color: #e5f2ff;
 				font-style: italic;
 				margin: 1em 0 0 0;
 			}
@@ -2569,7 +2569,7 @@
 
 						#header > nav ul li a.active {
 							background: #fff;
-							color: #4acaa8 !important;
+							color: #00274c !important;
 						}
 
 					#header > nav ul li:first-child {
